LPS-141042 search-experiences-web: Fix import modal footer being too short

--- a/modules/dxp/apps/search-experiences/search-experiences-web/src/main/resources/META-INF/resources/sxp_blueprint_admin/css/_import_sxp_blueprint.scss
+++ b/modules/dxp/apps/search-experiences/search-experiences-web/src/main/resources/META-INF/resources/sxp_blueprint_admin/css/_import_sxp_blueprint.scss
@@ -2,6 +2,6 @@
 	.modal-footer {
 		bottom: 0;
 		position: fixed;
-		width: 100%;
+		width: 100% !important;
 	}
 }
